// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Concentric Layout Should return result that matches snapshot 1`] = `
Object {
  "edges": Array [
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "loop",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-1",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-1",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-2",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-2",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-3",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-3",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-4",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-4",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-5",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-5",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-6",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-6",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-7",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-7",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-8",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-8",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-1",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-1",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-2",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-2",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-3",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-3",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-4",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-4",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-5",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-5",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-6",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-6",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-7",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-7",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-8",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-8",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-9",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-9",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
  ],
  "levels": Array [
    Array [
      Object {
        "node": Object {
          "data": Object {
            "id": "node-0",
            "label": "徐臣莺某某公司(node-0)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "徐臣莺某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "传统行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "202372158",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "9357810591505709",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "27991.8147(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 54,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "吉林省",
              },
            ],
            "type": "company",
          },
          "id": "node-0",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 18,
      },
    ],
    Array [
      Object {
        "node": Object {
          "data": Object {
            "id": "node-1",
            "label": "郭精某某公司(node-1)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "郭精某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "673928692",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "3703448383706587",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "39244.7661(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 55,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "福建省",
              },
            ],
            "type": "company",
          },
          "id": "node-1",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-2",
            "label": "暨刻瑜某某公司(node-2)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "暨刻瑜某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "传统行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "057608991",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "8148209249716394",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "50526.7307(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 69,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "福建省",
              },
            ],
            "type": "company",
          },
          "id": "node-2",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-3",
            "label": "鲁涤媚某某公司(node-3)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "鲁涤媚某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "026585762",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "6397905239447341",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "83683.0498(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 98,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "重庆市",
              },
            ],
            "type": "company",
          },
          "id": "node-3",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-4",
            "label": "宗陂拆某某公司(node-4)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "宗陂拆某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "传统行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "014216010",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "023036598552708343",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "67834.7548(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 69,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "河北省",
              },
            ],
            "type": "company",
          },
          "id": "node-4",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-5",
            "label": "牛城某某公司(node-5)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "牛城某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "958535499",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "8552263219031175",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "16675.9613(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 79,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "西藏自治区",
              },
            ],
            "type": "company",
          },
          "id": "node-5",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-6",
            "label": "寇交践某某公司(node-6)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "寇交践某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "361482999",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "9581986256248045",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "59167.0185(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 15,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "湖南省",
              },
            ],
            "type": "company",
          },
          "id": "node-6",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-7",
            "label": "熊全某某公司(node-7)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "熊全某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "传统行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "604129966",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "7678397415260516",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "37060.7734(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 47,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "西藏自治区",
              },
            ],
            "type": "company",
          },
          "id": "node-7",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-8",
            "label": "龙胡定某某公司(node-8)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "龙胡定某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "144790128",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "9186344430201236",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "23680.2105(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 100,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "海南省",
              },
            ],
            "type": "company",
          },
          "id": "node-8",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-9",
            "label": "夏崩己阴某某公司(node-9)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "夏崩己阴某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "658722341",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "750002646477931",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "64985.0703(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 60,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "云南省",
              },
            ],
            "type": "company",
          },
          "id": "node-9",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 1,
      },
    ],
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "node-0",
        "label": "徐臣莺某某公司(node-0)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "徐臣莺某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "传统行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "202372158",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "9357810591505709",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "27991.8147(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 54,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "吉林省",
          },
        ],
        "type": "company",
      },
      "degree": 18,
      "id": "node-0",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": 4.71238898038469,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 500,
      "y": 500,
    },
    Object {
      "data": Object {
        "id": "node-1",
        "label": "郭精某某公司(node-1)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "郭精某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "673928692",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "3703448383706587",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "39244.7661(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 55,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "福建省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-1",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": 4.71238898038469,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 499.99999999999994,
      "y": 339.1907579910302,
    },
    Object {
      "data": Object {
        "id": "node-2",
        "label": "暨刻瑜某某公司(node-2)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "暨刻瑜某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "传统行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "057608991",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "8148209249716394",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "50526.7307(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 69,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "福建省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-2",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": 4.014257279586958,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 396.63381171355,
      "y": 376.81297375685375,
    },
    Object {
      "data": Object {
        "id": "node-3",
        "label": "鲁涤媚某某公司(node-3)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "鲁涤媚某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "026585762",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "6397905239447341",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "83683.0498(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 98,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "重庆市",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-3",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": 3.316125578789226,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 341.63381171355,
      "y": 472.0757681731421,
    },
    Object {
      "data": Object {
        "id": "node-4",
        "label": "宗陂拆某某公司(node-4)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "宗陂拆某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "传统行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "014216010",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "023036598552708343",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "67834.7548(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 69,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "河北省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-4",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": 2.6179938779914944,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 360.7351112569124,
      "y": 580.4046210044849,
    },
    Object {
      "data": Object {
        "id": "node-5",
        "label": "牛城某某公司(node-5)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "牛城某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "958535499",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "8552263219031175",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "16675.9613(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 79,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "西藏自治区",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-5",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": 1.9198621771937625,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 445,
      "y": 651.1112580700043,
    },
    Object {
      "data": Object {
        "id": "node-6",
        "label": "寇交践某某公司(node-6)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "寇交践某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "361482999",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "9581986256248045",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "59167.0185(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 15,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "湖南省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-6",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": 1.2217304763960306,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 555,
      "y": 651.1112580700042,
    },
    Object {
      "data": Object {
        "id": "node-7",
        "label": "熊全某某公司(node-7)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "熊全某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "传统行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "604129966",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "7678397415260516",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "37060.7734(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 47,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "西藏自治区",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-7",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": 0.5235987755982991,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 639.2648887430876,
      "y": 580.404621004485,
    },
    Object {
      "data": Object {
        "id": "node-8",
        "label": "龙胡定某某公司(node-8)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "龙胡定某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "144790128",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "9186344430201236",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "23680.2105(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 100,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "海南省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-8",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": -0.17453292519943275,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 658.36618828645,
      "y": 472.075768173142,
    },
    Object {
      "data": Object {
        "id": "node-9",
        "label": "夏崩己阴某某公司(node-9)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "夏崩己阴某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "658722341",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "750002646477931",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "64985.0703(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 60,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "云南省",
          },
        ],
        "type": "company",
      },
      "degree": 1,
      "id": "node-9",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 160.80924200896982,
          "theta": -0.8726646259971647,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 603.36618828645,
      "y": 376.81297375685375,
    },
  ],
  "outerR": 160.80924200896982,
}
`;

exports[`Concentric Layout Should return result that matches snapshot with x2, y2 1`] = `
Object {
  "edges": Array [
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "loop",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-1",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-1",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-2",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-2",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-3",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-3",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-4",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-4",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-5",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-5",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-6",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-6",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-7",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-7",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-0",
        "target": "node-8",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-0",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-8",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-1",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-1",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-2",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-2",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-3",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-3",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-4",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-4",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-5",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-5",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-6",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-6",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-7",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-7",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-8",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-8",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
    Object {
      "data": Object {
        "properties": Array [],
        "source": "node-9",
        "target": "node-0",
      },
      "loopCfg": Object {
        "dist": 20,
        "position": "top",
      },
      "shape": "LineEdge",
      "source": "node-9",
      "style": Object {
        "cursor": "pointer",
        "endArrow": true,
        "lineAppendWidth": 10,
        "lineWidth": 1.5,
        "stroke": "#ddd",
      },
      "target": "node-0",
    },
  ],
  "levels": Array [
    Array [
      Object {
        "node": Object {
          "data": Object {
            "id": "node-0",
            "label": "徐臣莺某某公司(node-0)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "徐臣莺某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "传统行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "202372158",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "9357810591505709",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "27991.8147(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 54,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "吉林省",
              },
            ],
            "type": "company",
          },
          "id": "node-0",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 18,
      },
    ],
    Array [
      Object {
        "node": Object {
          "data": Object {
            "id": "node-1",
            "label": "郭精某某公司(node-1)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "郭精某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "673928692",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "3703448383706587",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "39244.7661(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 55,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "福建省",
              },
            ],
            "type": "company",
          },
          "id": "node-1",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-2",
            "label": "暨刻瑜某某公司(node-2)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "暨刻瑜某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "传统行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "057608991",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "8148209249716394",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "50526.7307(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 69,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "福建省",
              },
            ],
            "type": "company",
          },
          "id": "node-2",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-3",
            "label": "鲁涤媚某某公司(node-3)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "鲁涤媚某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "026585762",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "6397905239447341",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "83683.0498(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 98,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "重庆市",
              },
            ],
            "type": "company",
          },
          "id": "node-3",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-4",
            "label": "宗陂拆某某公司(node-4)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "宗陂拆某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "传统行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "014216010",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "023036598552708343",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "67834.7548(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 69,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "河北省",
              },
            ],
            "type": "company",
          },
          "id": "node-4",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-5",
            "label": "牛城某某公司(node-5)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "牛城某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "958535499",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "8552263219031175",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "16675.9613(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 79,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "西藏自治区",
              },
            ],
            "type": "company",
          },
          "id": "node-5",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-6",
            "label": "寇交践某某公司(node-6)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "寇交践某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "361482999",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "9581986256248045",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "59167.0185(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 15,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "湖南省",
              },
            ],
            "type": "company",
          },
          "id": "node-6",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-7",
            "label": "熊全某某公司(node-7)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "熊全某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "传统行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "604129966",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "7678397415260516",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "37060.7734(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 47,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "西藏自治区",
              },
            ],
            "type": "company",
          },
          "id": "node-7",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-8",
            "label": "龙胡定某某公司(node-8)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "龙胡定某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "144790128",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "9186344430201236",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "23680.2105(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 100,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "海南省",
              },
            ],
            "type": "company",
          },
          "id": "node-8",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 2,
      },
      Object {
        "node": Object {
          "data": Object {
            "id": "node-9",
            "label": "夏崩己阴某某公司(node-9)",
            "properties": Array [
              Object {
                "code": "name",
                "name": "公司名称",
                "value": "夏崩己阴某某公司",
              },
              Object {
                "code": "companyType",
                "name": "类型",
                "value": "非上市公司",
              },
              Object {
                "code": "industry",
                "name": "行业",
                "value": "互联网行业",
              },
              Object {
                "code": "phone",
                "name": "电话",
                "value": "658722341",
              },
              Object {
                "code": "USCC",
                "name": "统一社会信用代码",
                "value": "750002646477931",
              },
              Object {
                "code": "registered capital",
                "name": "注册资本",
                "value": "64985.0703(万元)",
              },
              Object {
                "code": "number of participants",
                "name": "参保人数",
                "value": 60,
              },
              Object {
                "code": "register prov",
                "name": "注册省份",
                "value": "云南省",
              },
            ],
            "type": "company",
          },
          "id": "node-9",
          "shape": "CircleNode",
          "style": Object {
            "dark": "#eee",
            "fontColor": "#3b3b3b",
            "fontSize": 12,
            "nodeSize": 20,
            "primaryColor": "#515151",
          },
        },
        "value": 1,
      },
    ],
  ],
  "nodes": Array [
    Object {
      "data": Object {
        "id": "node-0",
        "label": "徐臣莺某某公司(node-0)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "徐臣莺某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "传统行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "202372158",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "9357810591505709",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "27991.8147(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 54,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "吉林省",
          },
        ],
        "type": "company",
      },
      "degree": 18,
      "id": "node-0",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.71238898038469,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 500,
      "y": 500,
    },
    Object {
      "data": Object {
        "id": "node-1",
        "label": "郭精某某公司(node-1)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "郭精某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "673928692",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "3703448383706587",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "39244.7661(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 55,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "福建省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-1",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.71238898038469,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 500,
      "y": 390,
    },
    Object {
      "data": Object {
        "id": "node-2",
        "label": "暨刻瑜某某公司(node-2)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "暨刻瑜某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "传统行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "057608991",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "8148209249716394",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "50526.7307(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 69,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "福建省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-2",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.6998889803846895,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 498.6250358070119,
      "y": 390.0085936381028,
    },
    Object {
      "data": Object {
        "id": "node-3",
        "label": "鲁涤媚某某公司(node-3)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "鲁涤媚某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "026585762",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "6397905239447341",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "83683.0498(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 98,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "重庆市",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-3",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.687388980384689,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 497.2502864493816,
      "y": 390.0343732096727,
    },
    Object {
      "data": Object {
        "id": "node-4",
        "label": "宗陂拆某某公司(node-4)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "宗陂拆某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "传统行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "014216010",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "023036598552708343",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "67834.7548(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 69,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "河北省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-4",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.67488898038469,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 495.8759667288994,
      "y": 390.07733468670415,
    },
    Object {
      "data": Object {
        "id": "node-5",
        "label": "牛城某某公司(node-5)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "牛城某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "958535499",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "8552263219031175",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "16675.9613(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 79,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "西藏自治区",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-5",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.66238898038469,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 494.50229138022536,
      "y": 390.1374713565537,
    },
    Object {
      "data": Object {
        "id": "node-6",
        "label": "寇交践某某公司(node-6)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "寇交践某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "361482999",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "9581986256248045",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "59167.0185(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 15,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "湖南省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-6",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.64988898038469,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 493.1294750373382,
      "y": 390.2147738229891,
    },
    Object {
      "data": Object {
        "id": "node-7",
        "label": "熊全某某公司(node-7)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "熊全某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "传统行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "604129966",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "7678397415260516",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "37060.7734(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 47,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "西藏自治区",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-7",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.6373889803846895,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 491.7577321999983,
      "y": 390.3092300076572,
    },
    Object {
      "data": Object {
        "id": "node-8",
        "label": "龙胡定某某公司(node-8)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "龙胡定某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "144790128",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "9186344430201236",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "23680.2105(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 100,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "海南省",
          },
        ],
        "type": "company",
      },
      "degree": 2,
      "id": "node-8",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.624888980384689,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 490.38727720023337,
      "y": 390.4208251519713,
    },
    Object {
      "data": Object {
        "id": "node-9",
        "label": "夏崩己阴某某公司(node-9)",
        "properties": Array [
          Object {
            "code": "name",
            "name": "公司名称",
            "value": "夏崩己阴某某公司",
          },
          Object {
            "code": "companyType",
            "name": "类型",
            "value": "非上市公司",
          },
          Object {
            "code": "industry",
            "name": "行业",
            "value": "互联网行业",
          },
          Object {
            "code": "phone",
            "name": "电话",
            "value": "658722341",
          },
          Object {
            "code": "USCC",
            "name": "统一社会信用代码",
            "value": "750002646477931",
          },
          Object {
            "code": "registered capital",
            "name": "注册资本",
            "value": "64985.0703(万元)",
          },
          Object {
            "code": "number of participants",
            "name": "参保人数",
            "value": 60,
          },
          Object {
            "code": "register prov",
            "name": "注册省份",
            "value": "云南省",
          },
        ],
        "type": "company",
      },
      "degree": 1,
      "id": "node-9",
      "layout": Object {
        "concentric": Object {
          "center": Object {
            "x": 500,
            "y": 500,
          },
          "outerR": 110,
          "theta": 4.61238898038469,
        },
      },
      "shape": "CircleNode",
      "style": Object {
        "dark": "#eee",
        "fontColor": "#3b3b3b",
        "fontSize": 12,
        "nodeSize": 20,
        "primaryColor": "#515151",
      },
      "x": 489.01832416884895,
      "y": 390.5495418194172,
    },
  ],
  "outerR": 110,
}
`;
